--- a/theme/_sass/_variables.scss
+++ b/theme/_sass/_variables.scss
@@ -3,6 +3,8 @@
 // https://github.com/twbs/bootstrap/blob/master/scss/_variables.scss
 // for things to override.
 
-// Set the primarys colour to green.
-$green: #28a745 !default;
-$primary: $green !default;
+// Set the primarys colour to purple.
+$purp: #57059b !default;
+$primary: $purp !default;
+
+$dark: $purp;
