--- a/_includes/components/project-meta.html
+++ b/_includes/components/project-meta.html
@@ -10,7 +10,7 @@
                 <span class="icon grey mr-1">
                     {% include entypo/arrow-left.svg %}
                 </span>
-                <a href="{{ site.baseurl }}{% link _pages/projects.md %}">Back to the contents</a>
+                <a href="{{ site.baseurl }}{% link projects.md %}">Back to the contents</a>
             </div>
         </div>
     </div>
