--- a/theme/_sass/_variables.scss
+++ b/theme/_sass/_variables.scss
@@ -4,13 +4,8 @@
 // for things to override.
 
 // Set the primarys colour to purple.
-$purp: #57059b !default;
+$purp: #d1abf0 !default;
 $primary: $purp !default;
 
 $dark: $purp;
 
-// Override Bootstrap code styling
-$code-color: #e83e8c !default;              // Inline code text color
-$code-bg: #f8f8f8 !default;                 // Inline code background
-$pre-color: #212529 !default;               // Pre block text
-$pre-bg: #f8f8f8 !default;                  // Pre block background
