--- a/theme/_sass/_theme.scss
+++ b/theme/_sass/_theme.scss
@@ -65,3 +65,13 @@ h2[id]::before {
         border: 0 !important;
     }
 }
+
+pre, pre code, .highlight pre, .highlight code {
+    background: #f5f5f5;
+    color: #222;
+    border-radius: 6px;
+    padding: 1em;
+    display: block;
+    overflow-x: auto;
+    white-space: pre;
+}
