--- a/theme/_sass/_theme.scss
+++ b/theme/_sass/_theme.scss
@@ -67,7 +67,7 @@ h2[id]::before {
 }
 
 pre, pre code, .highlight pre, .highlight code {
-    background: #f5f5f5;
+    background: #bba0f1;
     color: #222;
     border-radius: 6px;
     padding: 1em;
