--- a/theme/_sass/_theme.scss
+++ b/theme/_sass/_theme.scss
@@ -66,7 +66,7 @@ h2[id]::before {
     }
 }
 
-pre, pre code, .highlight pre, .highlight code {
+pre, .highlight pre {
     background: #bba0f1;
     color: #222;
     border-radius: 6px;
