--- a/theme/_sass/_variables.scss
+++ b/theme/_sass/_variables.scss
@@ -4,7 +4,7 @@
 // for things to override.
 
 // Set the primarys colour to purple.
-$purp: #380264 !default;
+$purp: #5e1996 !default;
 $primary: $purp !default;
 
 $dark: $purp;
