--- a/theme/_sass/_theme.scss
+++ b/theme/_sass/_theme.scss
@@ -54,6 +54,15 @@ h2[id]::before {
     margin-top: -80px;
 }
 
+pre,
+.highlight pre {
+    background: #c99cea;   // Your highlight color
+    color: #222;           // Text color for code
+    border-radius: 6px;
+    padding: 1em;
+    overflow-x: auto;
+}
+
 @media print {
     body {
         -webkit-print-color-adjust: exact !important;
