the color spectrum

--- a/theme/_sass/_theme.scss
+++ b/theme/_sass/_theme.scss
@@ -55,7 +55,7 @@ h2[id]::before {
 }
 
 pre, .highlight pre {
-    background: #c99cea;   // Your highlight color
+    background: #dbc3ec;   // Your highlight color
     color: #222;           // Text color for code
     border-radius: 6px;
     padding: 1em;
